--- a/charts/k8sscrmgr/templates/k8s-scr-mgr-role.yaml
+++ b/charts/k8sscrmgr/templates/k8s-scr-mgr-role.yaml
@@ -1,12 +1,17 @@
-
+{{- $seen := dict -}} {{/* set of namespaces we've already emitted */}}
 {{- range $i, $item := .Values.scr }}
   {{- /* Compute normalized namespace */}}
   {{- $ns := "" -}}
   {{- if eq $i 0 }}
     {{- $ns = (default $.Values.defaultScrNamespace $item.namespace) | lower | replace " " "-" | trunc 63 -}}
   {{- else }}
-    {{- $ns = (required (printf "Missing parameter 'scr[%d].namespace': --set scr[%d].namespace=<namespace>" $i $i) $item.namespace) | lower | replace " " "-" | trunc 63 -}}
+    {{- $ns = (required (printf "'scr[%d].namespace': --set scr[%d].namespace=<namespace>" $i $i) $item.namespace) | lower | replace " " "-" | trunc 63 -}}
   {{- end }}
+
+  {{- /* Only create Role once per unique namespace */}}
+  {{- if not (hasKey $seen $ns) }}
+    {{- /* Mark as seen before rendering to be safe in nested/ranged contexts */}}
+    {{- $_ := set $seen $ns true -}}
 
 ---
 
@@ -36,4 +41,7 @@ rules:
     resources: ["ingresses"]
     verbs: ["delete"]
 
+---
+
+  {{- end }}
 {{- end }}
