--- a/charts/k8sscrmgr/templates/scr-secret-db.yaml
+++ b/charts/k8sscrmgr/templates/scr-secret-db.yaml
@@ -6,21 +6,22 @@
       {{- $ns = (default $.Values.defaultScrNamespace $item.namespace) | lower | replace " " "-" | trunc 63 -}}
     {{- else }}
       {{- /* For subsequent items: hard-require namespace */}}
-      {{- $ns = (required (printf "Missing parameter 'scr[%d].namespace': --set scr[%d].namespace=<container registry location (URI)>" $i $i) $item.namespace) | lower | replace " " "-" | trunc 63 -}}
+      {{- $ns = (required (printf "'scr[%d].namespace': --set scr[%d].namespace=<namespace>" $i $i) $item.namespace) | lower | replace " " "-" | trunc 63 -}}
     {{- end }}
     
     {{- $namespace := $ns -}}
     {{- $connectionstring := $item.dbCredentials }}
+    {{- $db_secret_name := (printf "db-%s" $item.publishingDestination | lower | replace " " "-" | trunc 63) -}}
 
 ---
 apiVersion: v1
 kind: Secret
 metadata:
-  name: scr-db-secrets
+  name: {{ $db_secret_name | quote }}
   namespace: {{ $namespace | quote }}
 type: Opaque
 data:
   db.secrets: {{ printf "connectionstring=%s" $connectionstring | b64enc | quote }}
   
-    {{- end }}
+  {{- end }}
 {{- end }}
