--- a/charts/k8sscrmgr/templates/scr-secret-docker.yaml
+++ b/charts/k8sscrmgr/templates/scr-secret-docker.yaml
@@ -5,25 +5,34 @@
     {{- $ns = (default $.Values.defaultScrNamespace $item.namespace) | lower | replace " " "-" | trunc 63 -}}
   {{- else }}
     {{- /* For subsequent items: hard-require namespace */}}
-    {{- $ns = (required (printf "Missing parameter 'scr[%d].namespace': --set scr[%d].namespace=<container registry location (URI)>" $i $i) $item.namespace) | lower | replace " " "-" | trunc 63 -}}
+    {{- $ns = (required (printf "'scr[%d].namespace': --set scr[%d].namespace=<namespace>" $i $i) $item.namespace) | lower | replace " " "-" | trunc 63 -}}
   {{- end }}
   
   {{- $namespace := $ns -}}
 
+  {{- $dest_name := (required (printf "'scr[%d].publishingDestination': --set scr[%d].publishingDestination=<viya publishing destination name>" $i $i) $item.publishingDestination) | lower | replace " " "-" | trunc 63 -}}   
+  
+  {{- /* Build secret name, ensure valid and trimmed */ -}}
+  {{- $pull_secret_name := (printf "pull-%s" $dest_name) | lower -}}
+  {{- $pull_secret_name = regexReplaceAll "-+" $pull_secret_name "-" -}}
+  {{- $pull_secret_name = trimSuffix "-" (trimPrefix "-" $pull_secret_name) | trunc 63 -}}
+  {{- if eq $pull_secret_name "" -}}
+    {{- fail (printf "Could not build a valid secret name from 'scr[%d].publishingDestination'." $i) -}}
+  {{- end -}}
 ---
 apiVersion: v1
 kind: Secret
 metadata:
-  name: scr-docker-pull-secret   # do not change this name!
+  name: {{ $pull_secret_name | quote }}
   namespace: {{ $namespace | quote }}
 type: kubernetes.io/dockerconfigjson
 stringData:
   .dockerconfigjson: |
     {
       "auths": {
-        "{{ required (printf "Missing parameter 'scr[%d].dockerCredentials.baseRepoURL': --set scr[%d].dockerCredentials.baseRepoURL=<container registry location (URI)>" $i $i) $item.dockerCredentials.baseRepoURL }}": {
-          "username": "{{ required (printf "Missing parameter 'scr[%d].dockerCredentials.registryId': --set scr[%d].dockerCredentials.registryId=<container registry location (URI)>" $i $i) $item.dockerCredentials.registryId }}",
-          "password": "{{ required (printf "Missing parameter 'scr[%d].dockerCredentials.registryPassword': --set scr[%d].dockerCredentials.registryPassword=<container registry password>" $i $i) $item.dockerCredentials.registryPassword }}",
+        "{{ required (printf "'scr[%d].dockerCredentials.baseRepoURL': --set scr[%d].dockerCredentials.baseRepoURL=<container registry URI>" $i $i) $item.dockerCredentials.baseRepoURL }}": {
+          "username": "{{ required (printf "'scr[%d].dockerCredentials.registryId': --set scr[%d].dockerCredentials.registryId=<container registry ID>" $i $i) $item.dockerCredentials.registryId }}",
+          "password": "{{ required (printf "'scr[%d].dockerCredentials.registryPassword': --set scr[%d].dockerCredentials.registryPassword=<container registry password>" $i $i) $item.dockerCredentials.registryPassword }}",
            "auth": "{{ printf "%s:%s" $item.dockerCredentials.registryId $item.dockerCredentials.registryPassword | b64enc }}"
         }
       }
