--- a/charts/k8sscrmgr/templates/k8s-scr-mgr-cfg.yaml
+++ b/charts/k8sscrmgr/templates/k8s-scr-mgr-cfg.yaml
@@ -1,5 +1,3 @@
-{{- $scr_namespace := (default .Values.defaultScrNamespace (index .Values.scr 0).namespace) | lower | replace " " "-" | trunc 63 -}}
-
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -8,10 +6,9 @@ metadata:
 data:
   config: |
     class Config:
-        HOST= '{{ required "Missing parameter 'k8sScrMgr.host': --set k8sScrMgr.host=<k8s-scr-mgr URL>" .Values.k8sScrMgr.host }}'
-        NAMESPACE= '{{ $scr_namespace }}'
+        HOST= '{{ required "'k8sScrMgr.host': --set k8sScrMgr.host=<k8s-scr-mgr URL>" .Values.k8sScrMgr.host }}'
         CONTAINER_PREFIX= '{{ .Values.k8sScrMgr.container_prefix }}'
-        VIYA_NAMESPACE= '{{ .Values.k8sScrMgr.viya_namespace }}'
+        VIYA_NAMESPACE= '{{ .Values.k8sScrMgr.viyaNamespace }}'
         MAS_POD= '{{ .Values.k8sScrMgr.mas_pod }}'
         LIST_SCR= {{ ternary "True" "False" .Values.k8sScrMgr.list_scr }}
         PULL_SCR= {{ ternary "True" "False" .Values.k8sScrMgr.pull_scr }}
@@ -22,23 +19,39 @@ data:
         ##################################################
         # Below are settings to map namespaces to container registries
         #################################################
+        PUBLISHING_DESTINATIONS= 
+{{- /* Build a map in memory  first */}}
+{{- $ns := "-" -}}
+{{- $dest := dict -}}
+{{- $dbSecret := "False" -}}
+{{- $list := .Values.scr | default (list) -}}
+{{- range $i, $item := $list }}
+  {{- /* Determine publishing destination */}}
+  {{- $publishingDestination := (required (printf "'scr[%d].publishingDestination': --set scr[%d].publishingDestination=<viya publishing destination>" $i $i) $item.publishingDestination) | lower -}}
 
-{{- $nsRepoMap := dict -}}
-{{- $namespace := "" -}}
-{{- $last := sub (len .Values.scr) 1 -}}
-{{- range $i, $item := .Values.scr }}
-  {{- $comma := ternary "," "" (eq $i $last | not) -}}
-
+  {{- /* Safely dig nested values and normalize types */}}
   {{- if eq $i 0 }}
     {{- /* For the first item: default to "scr" if missing */}}
-    {{- $namespace = (default $.Values.defaultScrNamespace $item.namespace) | lower | replace " " "-" | trunc 63 -}}
+    {{- $ns = (default $.Values.defaultScrNamespace $item.namespace) | lower | replace " " "-" | trunc 63 -}}
   {{- else }}
-    {{- /* For subsequent items: hard-require namespace */}}
-    {{- $namespace = (required (printf "Missing parameter 'scr[%d].namespace': --set scr[%d].namespace=<container registry location (URI)>" $i $i) $item.namespace) | lower | replace " " "-" | trunc 63 -}}
+    {{- /* For subsequent items: namespace is required */}}
+    {{- $ns = (required (printf "'scr[%d].namespace': --set scr[%d].namespace=<namespace>" $i $i) $item.namespace) | lower | replace " " "-" | trunc 63 -}}
   {{- end }}
-  {{- $registry := (required (printf "Missing parameter 'scr[%d].dockerCredentials.baseRepoURL': --set scr[%d].dockerCredentials.baseRepoURL=<container registry location (URI)>" $i $i) $item.dockerCredentials.baseRepoURL) -}}
 
-  {{- $_ := set $nsRepoMap $namespace $registry -}}
+  {{- $namespace := $ns -}}
+
+  {{- $containerRegistry := (required (printf "'scr[%d].dockerCredentials.baseRepoURL': --set scr[%d].dockerCredentials.baseRepoURL=<container registry URI>" $i $i) $item.dockerCredentials.baseRepoURL) | lower -}}
+
+  {{- $dbSecret := "False" -}}
+  {{- if $item.dbCredentials }}
+    {{- $dbSecret = "True" -}}
+  {{ end }} 
+  {{- $setDbSecret := $dbSecret -}}
+
+  {{- /* Compose the inner value and add it to the map */}}
+  {{- $val := dict "namespace" $namespace "registry" $containerRegistry "setDbSecret" $setDbSecret -}}
+  {{- $_ := set $dest $publishingDestination $val -}}
 {{- end }}
-        NS_TO_REGISTRY_MAP= { {{ toPrettyJson $nsRepoMap | trimPrefix "{\n" | trimSuffix "\n}" | nindent 27 }} 
-                            }
+
+{{- /* Pretty-print JSON and indent for YAML block scalar */ -}}
+{ {{ toPrettyJson $dest | trimPrefix "{\n" | trimSuffix "\n}" | nindent 27 }} }
