--- a/data/config/k8s-scr-mgr.config
+++ b/data/config/k8s-scr-mgr.config
@@ -10,10 +10,12 @@ class Config:
     GETLOG_SCR= True
     GETLOG_MAS= True
     PUBLISHING_DESTINATIONS={ 
-                         "<publishing destination>": 
+                         "<publishing destination>": # Viya Publishing Destination name
                                 {
-                                "namespace": "<k8s namespace>",
-                                "registry": "<myreg.azurecr.io>",
-                                "setDbSecret": "True/False"
+                                "namespace": "<k8s namespace>", # Dedicated namespace to load SCR containers
+                                "registry": "<myreg.azurecr.io>", # Container registry for SCR images
+                                "setDbSecret": "True/False" # Set to True when using database connection otherwise False
                                 } 
-                            }
+                            # Continue the structure if you want to register more that one Publishing Destination
+                            } 
+                
