--- a/data/yaml/scr-secret-db.yaml
+++ b/data/yaml/scr-secret-db.yaml
@@ -11,7 +11,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: scr-db-secrets # do not change this name!
+  name: db-<PUBLISHING-DESTINATION> # Replace <PUBLISHING-DESTINATION> with the publishing destination name. All in lowercase letters and no special characters.
   namespace: scr # NAMESPACE for scr container
 type: Opaque
 data:
