--- a/data/yaml/scr-secret-docker.yaml
+++ b/data/yaml/scr-secret-docker.yaml
@@ -10,7 +10,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: scr-docker-pull-secret # do not change this name!
+  name: pull-<PUBLISHING-DESTINATION> # Replace <PUBLISHING-DESTINATION> with the publishing destination name. All in lowercase letters and no special characters.
   namespace: scr # NAMESPACE for scr container
 type: kubernetes.io/dockerconfigjson
 data:
