--- a/charts/k8sscrmgr/values.yaml
+++ b/charts/k8sscrmgr/values.yaml
@@ -17,7 +17,8 @@ k8sScrMgr:
   restart_scr: True
   delete_scr: True
   getlog_scr: True
-  getlog_mas: True 
+  getinfo_scr: True
+  getlog_mas: True
 
 # List of scr parameters used when creating more than one SCR namespace
 scr:
