--- a/data/yaml/k8s-scr-mgr-role.yaml
+++ b/data/yaml/k8s-scr-mgr-role.yaml
@@ -12,7 +12,7 @@ rules:
   verbs: ["get", "list", "watch", "update", "patch", "delete"]
 - apiGroups: ["networking.k8s.io"]
   resources: ["ingresses"]
-  verbs: ["delete"]
+  verbs: ["delete", "get", "list", "watch", "create", "update", "patch"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
