--- a/data/config/k8s-scr-mgr.config
+++ b/data/config/k8s-scr-mgr.config
@@ -8,6 +8,7 @@ class Config:
     RESTART_SCR= True
     DELETE_SCR= True
     GETLOG_SCR= True
+    GETINFO_SCR= True
     GETLOG_MAS= True
     PUBLISHING_DESTINATIONS={ 
                          "<publishing destination>": # Viya Publishing Destination name
